force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/KimbleOne__RevenueBehaviourRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Revenue Behaviour Rule</label>
    <nameField>
        <label>Revenue Behaviour Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Behaviour Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>