force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/fields/KimbleOne__ApplyDefaultOnRevenueTypeBasisChange__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApplyDefaultOnRevenueTypeBasisChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Default On Rev Type Basis Change</label>
    <type>Checkbox</type>
</CustomField>