force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/fields/KimbleOne__DefaultRevenueType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultRevenueType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Revenue Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentDefaultRevenueType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Revenue Behaviour Rules</relationshipLabel>
    <relationshipName>RevenueBehaviourRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>