force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/fields/KimbleOne__ProductDomain__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductDomain__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Domain</label>
    <referenceTo>KimbleOne__ProductDomain__c</referenceTo>
    <relationshipLabel>Revenue Behaviour Rules</relationshipLabel>
    <relationshipName>RevenueBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>