force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/fields/KimbleOne__RateCardCombinationDefinition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCardCombinationDefinition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Card Combination Definition</label>
    <referenceTo>KimbleOne__RateCardCombinationDefinition__c</referenceTo>
    <relationshipLabel>Revenue Behaviour Rules</relationshipLabel>
    <relationshipName>RevenueBehaviourRules</relationshipName>
    <type>Lookup</type>
</CustomField>