force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/fields/KimbleOne__ResourcedActivityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity Type</label>
    <referenceTo>KimbleOne__ResourcedActivityType__c</referenceTo>
    <relationshipLabel>Revenue Behaviour Rules</relationshipLabel>
    <relationshipName>RevenueBehaviourRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>