force-app/main/default/objects/KimbleOne__RevenueBehaviourRule__c/listViews/KimbleOne__All_Rules.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All_Rules</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourcedActivityType__c</columns>
    <columns>KimbleOne__DefaultRevenueType__c</columns>
    <columns>KimbleOne__Description__c</columns>
    <columns>KimbleOne__ProductDomain__c</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__ForecastFactor__c</columns>
    <columns>KimbleOne__RateCardCombinationDefinition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
    <language>en_US</language>
</ListView>